fix some spacing and map color

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -72,8 +72,8 @@ h2{
 }
 
 .navbar-fixed-top{
-	background-color: #A1E8D9;
-	opacity: 0.7;
+	background-color: #695D46;
+	opacity: 0.9;
 }
 
 .navbar-inverse{
@@ -105,7 +105,6 @@ h2{
    text-align: center;
 /*   background-color: #FF712C;*/
    opacity: .2;
-   border: 2px #FF712C dashed;
 }
 
 #map-canvas{
@@ -168,7 +167,7 @@ border-color: #4d90fe;
 
 
 #myModal{
-	background-color: #A1E8D9;
+	background-color: #FFF6C5;
 }
 
 legend {
